--- a/Minesweeper/style.css
+++ b/Minesweeper/style.css
@@ -17,14 +17,14 @@
 }
 
 html {
-    height: 100%;
+    min-height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .wrapper {
-    max-width: 800px;
+    max-width: 600px;
     display: grid;
     grid-template-rows: 1fr auto 1fr;
     padding: 3%;
